add mailchimp form

--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,10 +1,11 @@
-<form action="" class="flex-ns mb3">
+<form action="https://fun.us20.list-manage.com/subscribe/post?u=e6106ba84910ecb4f75104513&amp;id=2b12ef647f" method="post" target="_blank" class="flex-ns mb3">
 
   <fieldset class="flex-auto mb2 mb0-ns mr2-ns" name="newsletter" action="newsletter-subscribe">
-    <input type="text" id="email" placeholder="Your email" class="w-100">
+    <input type="text" id="email" name="EMAIL" placeholder="Your email" class="w-100">
     <label for="email">Your email</label>
+    <input type="hidden" name="b_e6106ba84910ecb4f75104513_2b12ef647f" tabindex="-1" value="">
+    <input type="hidden" name="Subscribe" tabindex="-1" value="subscribe">
   </fieldset>
-
   <button class="btn mb3 w-100 w-auto-ns mb0-ns raise" type="submit">Submit</button>
 
 </form>
